--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unetra - About Us</title>
+  <title>Unetra - Contact Us</title>
   <!-- Latest Bootstrap CSS -->
   <link href="asset/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Link to external CSS -->
