Fixed merge conflicts and updated career opportunities section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
 </head>
 
 <body>
@@ -53,7 +54,17 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav><br><br><br><br><br><br><br><br>
+  <section class="career-opportunities-section text-center">
+    <div class="container">
+      <h1 class="fw-bold">Unlocking Career Opportunities; <br> Fostering Business Growth</h1>
+      <p class="lead">Find Top Talent with Our Comprehensive Recruitment Solutions.</p>
+      <div class="d-flex justify-content-center gap-3 flex-wrap">
+        <a href="#" class="btn btn-success px-4 py-2">Current Jobs <i class="bi bi-arrow-right"></i></a>
+        <a href="#" class="btn btn-outline-success px-4 py-2">Channel Partner</a>
+      </div>
+    </div>
+  </section>
   <section class="banner-section">
     <div class="container-fluid main-content-header">
       <div class="row">
