--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <!-- Image Content -->
         <div class="col-lg-6 col-md-0 col-sm-0 d-flex justify-content-center home-image-div">
-          <img src="/asset/images/rb_18959.png" class="home-image img-fluid" alt="Banner Image"
+          <img src="https://patu2510.github.io/Unetra/asset/images/rb_18959.png" class="home-image img-fluid" alt="Banner Image"
             style="max-width: 72%; height: auto;">
         </div>
       </div>
