--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h1 class="fw-bold">Unlocking Career Opportunities; <br> Fostering Business Growth</h1>
       <p class="lead">Find Top Talent with Our Comprehensive Recruitment Solutions.</p>
       <div class="d-flex justify-content-center gap-3 flex-wrap">
-        <a href="#" class="btn btn-success px-4 py-2">Current Jobs <i class="bi bi-arrow-right"></i></a>
+        <a href="job.html"btn btn-success px-4 py-2">Current Jobs <i class="bi bi-arrow-right"></i></a>
         <a href="#" class="btn btn-outline-success px-4 py-2">Channel Partner</a>
       </div>
     </div>
