Added job postings page with sample job listings

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p class="lead">Find Top Talent with Our Comprehensive Recruitment Solutions.</p>
       <div class="d-flex justify-content-center gap-3 flex-wrap">
         <a href="job.html"btn btn-success px-4 py-2">Current Jobs <i class="bi bi-arrow-right"></i></a>
-        <a href="#" class="btn btn-outline-success px-4 py-2">Channel Partner</a>
+        <a href="channle.html" btn-outline-success px-4 py-2">Channel Partner</a>
       </div>
     </div>
   </section>
