--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <div class="container">
       <h1 class="hero-title " data-aos="fade-right">About Us</h1>
       <p class="hero-text" data-aos="fade-right" style="color: white !important;">
-        Unetra HR Solutions Established in 2019 by a team of seasoned HR managers, Unetra HR Solutions has become a trusted name in recruitment and HR consulting. We specialize in delivering top-quality recruitment services across Insurance, EdTech, Pharma, BFSI, and Real Estate industries.
+        Unetra HR Solutions, established in 2019 by a team of seasoned HR managers, has become a trusted name in recruitment and HR consulting. We specialize in delivering top-quality recruitment services across Insurance, EdTech, Pharma, BFSI, Real Estate, IT, Manufacturing, Retail, FMCG, Healthcare, and BPO/KPO industries.
       </p>
     </div>
    </section>
@@ -84,13 +84,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-12">
                   <h2 class="display-4 mb-4" data-aos="fade-down">Trusted, 5+ Years Experienced & Specialists</h2>
                   <p class="lead" data-aos="fade-right">
-                    With over 5+ years of experience, Unetra is a trusted manpower consulting firm specializing in
-                    providing
-                    end-to-end staffing solutions tailored to meet the diverse needs of businesses across various
-                    industries.
-                    We are dedicated to delivering the right talent to help organizations achieve their strategic goals,
-                    drive
-                    innovation, and enhance operational efficiency.
+                   With deep expertise in bulk hiring, lateral hiring, and leadership recruitment, we ensure that our clients receive well-screened, high-quality candidates suited to their organizational needs. Our strategic approach and commitment to excellence make us more than just a vendor—we function as an extension of your in-house HR team.
                   </p>
                   <p class="lead" data-aos="fade-right">
                     Our strength lies in providing high-quality candidates who not only meet job requirements but also align with your company’s culture and values. We prioritize building long-term partnerships with both clients and candidates by offering personalized, tailored solutions.
