--- a/channle.html
+++ b/channle.html
@@ -7,25 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #6c91b3;
-            color: #080808;
+            background-color: #f4f4f4;
+            color: #333;
             font-family: Arial, sans-serif;
         }
         .container {
-            background: #d3cfcf;
+            background: #fff;
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
         .partner-card {
-            background: #f7f5f5;
+            background: #e3e3e3;
             padding: 20px;
             border-radius: 10px;
             text-align: center;
         }
         .apply-btn {
-            background: #fff;
-            color: #000;
+            background: #007bff;
+            color: white;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
@@ -33,7 +33,7 @@
             margin-top: 10px;
         }
         .apply-btn:hover {
-            background: #ccc;
+            background: #0056b3;
         }
     </style>
 </head>
