--- a/service.html
+++ b/service.html
@@ -156,7 +156,7 @@
       </div>
       <div class="divider text-center"></div>
       <div class="text-center">
-        <p>Copyright © 2024 | Meero Overseas Hr Consultancy</p>
+        <p>Copyright ©Prathmesh 2025 | Unetra Hr Consultancy</p>
       </div>
     </div>
   </footer>
