--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg ssticky-top">
     <div class="container">
       <!-- Logo -->
-      <a class="navbar-brand" href="https://www.linkedin.com/company/unetra-hr-solutions-llp/">Unetra
+      <a class="navbar-brand" href="https://www.linkedin.com/company/unetra-hr-solutions-llp/">
         <img src="asset/images/logo.png" alt="Unetra Logo" width="150" height="auto"
           class="d-inline-block align-text-top" id="logo">
       </a>
