Local changes before pulling remote main

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
   
 </head>
 
@@ -54,17 +58,57 @@
         </ul>
       </div>
     </div>
-  </nav><br><br><br><br><br><br><br><br>
+  </nav>
   <section class="career-opportunities-section text-center">
     <div class="container">
       <h1 class="fw-bold">Unlocking Career Opportunities; <br> Fostering Business Growth</h1>
       <p class="lead">Find Top Talent with Our Comprehensive Recruitment Solutions.</p>
       <div class="d-flex justify-content-center gap-3 flex-wrap">
-        <a href="#" class="btn btn-success px-4 py-2">Current Jobs <i class="bi bi-arrow-right"></i></a>
-        <a href="#" class="btn btn-outline-success px-4 py-2">Channel Partner</a>
+        <a href="job.html" class="btn btn-success px-4 py-2">Current Jobs <i class="bi bi-arrow-right"></i></a>
+        <a href="channle.html" class="btn btn-outline-success px-4 py-2">Channel Partner</a>
       </div>
     </div>
-  </section>
+  </section><br><br>
+
+  <div class="services-container">
+    <div class="service-box">
+      <i class="fas fa-user-tie"></i>
+      <h5>Talent Acquisition & Recruitment Services</h5>
+      <p>Help businesses find and hire the right talent</p>
+    </div>
+  
+    <div class="service-box">
+      <i class="fas fa-shield-alt"></i>
+      <h5>Cybersecurity Implementation</h5>
+      <p>Implement SIEM, SOAR, EDR, and other security solutions</p>
+    </div>
+  
+    <div class="service-box">
+      <i class="fas fa-users-cog"></i>
+      <h5>HR Outsourcing</h5>
+      <p>For companies looking to outsource their HR functions</p>
+    </div>
+  
+    <div class="service-box">
+      <i class="fas fa-comments"></i>
+      <h5>Soft Skills & Professional Development</h5>
+      <p>Building essential workplace skills for professional success</p>
+    </div>
+  
+    <div class="service-box">
+      <i class="fas fa-laptop-code"></i>
+      <h5>Technology Solutions</h5>
+      <p>Software development, architecture consulting, and product engineering</p>
+    </div>
+  
+    <div class="service-box">
+      <i class="fas fa-code-branch"></i>
+      <h5>Technical and Digital Skills Training</h5>
+      <p>Equipping employees with the latest industry skills</p>
+    </div>
+  </div>
+  
+
   <section class="banner-section">
     <div class="container-fluid main-content-header">
       <div class="row">
